<resources>
    <string name="app_name">My Application</string>
    <string name="skip">skip</string>
    <string name="mobile_number_hint">Enter Your Mobile Number</string>
    <string name="fruit_market">Fruit Market</string>
    <string name="my_orders">My Orders</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="log_out">Log Out</string>
    <string name="notification">notification</string>
    <string name="my_account">My Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="language">language</string>
    <string name="security">Security</string>
    <string name="desactivate_acc">desactivate account</string>
    <string name="delete_account">Delete Account</string>
    <string name="place_order">Place Order</string>
</resources>