<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountFragment">

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/primaryLightColor"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="24dp"
        android:elevation="20dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile_pic" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <Button
        android:id="@+id/my_orders"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/my_orders"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/orders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <View
        android:id="@+id/divider_1"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_orders" />


    <Button
        android:id="@+id/my_favorites"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/favorites"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/favorite_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_1" />

    <View
        android:id="@+id/divider_2"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_favorites" />

    <Button
        android:id="@+id/settings"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/settings"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_2" />

    <View
        android:id="@+id/divider_3"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/my_cart"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/my_cart"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/shopping_cart_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_3" />

    <View
        android:id="@+id/divider_4"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_cart" />

    <Button
        android:id="@+id/rate_us"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/rate_us"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/rate_us"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_4" />

    <View
        android:id="@+id/divider_5"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rate_us" />


    <Button
        android:id="@+id/share"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/share"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/share"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_5" />

    <View
        android:id="@+id/divider_6"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/share" />

    <Button
        android:id="@+id/help"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/help"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/help"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_6" />

    <View
        android:id="@+id/divider_7"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help" />

    <Button
        android:id="@+id/log_out"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/log_out"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/log_out"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_7" />

    <View
        android:id="@+id/divider_8"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_out" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Boussami Nassim"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="nassimboussami@gmail.com"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />

    <ImageView
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="5dp"
        android:src="@drawable/edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profile_image" />

</androidx.constraintlayout.widget.ConstraintLayout>