<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AccountSettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/security"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/security"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/security"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/divider_1"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security" />


    <Button
        android:id="@+id/desactivate_account"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/desactivate_acc"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/desactivate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_1" />

    <View
        android:id="@+id/divider_2"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desactivate_account" />

    <Button
        android:id="@+id/delete_account"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/delete_account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_2" />

    <View
        android:id="@+id/divider_3"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_account" />

</androidx.constraintlayout.widget.ConstraintLayout>