<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/account_settings"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/account"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/account_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/divider_1"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_settings" />


    <Button
        android:id="@+id/notification"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/notifications"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/notifications_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_1" />

    <View
        android:id="@+id/divider_2"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notification" />

    <Button
        android:id="@+id/language"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="@string/language"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/language"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_2" />

    <View
        android:id="@+id/divider_3"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language" />


    <Button
        android:id="@+id/change_address"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="10dp"
        android:text="Change Address"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:icon="@drawable/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/divider_3" />

    <View
        android:id="@+id/divider_4"
        style="@style/Divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_address" />

</androidx.constraintlayout.widget.ConstraintLayout>